@startuml

title __REPOSITORIES's Class Diagram__\n

  package  {
    package edu.uark {
      package edu.uark.models.repositories {
        class EmployeeRepository {
        }
      }
    }
  }
  

  package  {
    package edu.uark {
      package edu.uark.models.repositories {
        class ProductRepository {
            + byLookupCode()
            + createOne()
            + ProductRepository()
        }
      }
    }
  }
  

  ProductRepository -up-|> ProductRepositoryInterface
  ProductRepository -up-|> BaseRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
